// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test-link-proxy-zip-shp should find a shapefile within the zip file 1`] = `
Array [
  Object {
    "archive": true,
    "files": Array [
      Object {
        "digest": "sha384-+1t5TeJcJ5X34OTBKFd9lDXmWfSP4yyKwNCd6HqLGKChrQodibskoUMz8lbBRABG",
        "name": "data.shp",
        "size": 11,
      },
      Object {
        "digest": "sha384-g/OOiDmdzWdrQElweiK218tYBpzU+Sqpg39YDz/OGKo2bHgTMSfs8PTUFsXaKRtU",
        "name": "data.cpg",
        "size": 11,
      },
      Object {
        "digest": "sha384-N0PxnfQbUbtgRHdg85YR5d23TJyCCw9dkMQ2b7sKrMLplKm2yiK2a+bPBWapI+PA",
        "name": "data.dbf",
        "size": 11,
      },
      Object {
        "digest": "sha384-KjIjW8mDGhYle3IvWHrtMZ3Yng0z3375s8hE8w9gcirOr8Ha1mldECb4q04fg4vc",
        "name": "data.prj",
        "size": 11,
      },
      Object {
        "digest": "sha384-FA1fzHfLn30z4w1QOE8IM3GlS45Xvmodk+MQdzWCkx8ceyOzE3aLBV9Gl7XXZJ4e",
        "name": "data.shx",
        "size": 11,
      },
    ],
    "name": "data.shp",
    "path": "data.zip/data.shp",
    "type": "shp",
  },
]
`;

exports[`test-link-proxy-zip-shp should override the downloads if data is different 1`] = `
Array [
  Object {
    "archive": true,
    "files": Array [
      Object {
        "digest": "sha384-+1t5TeJcJ5X34OTBKFd9lDXmWfSP4yyKwNCd6HqLGKChrQodibskoUMz8lbBRABG",
        "name": "data.shp",
        "size": 11,
      },
      Object {
        "digest": "sha384-g/OOiDmdzWdrQElweiK218tYBpzU+Sqpg39YDz/OGKo2bHgTMSfs8PTUFsXaKRtU",
        "name": "data.cpg",
        "size": 11,
      },
      Object {
        "digest": "sha384-N0PxnfQbUbtgRHdg85YR5d23TJyCCw9dkMQ2b7sKrMLplKm2yiK2a+bPBWapI+PA",
        "name": "data.dbf",
        "size": 11,
      },
      Object {
        "digest": "sha384-KjIjW8mDGhYle3IvWHrtMZ3Yng0z3375s8hE8w9gcirOr8Ha1mldECb4q04fg4vc",
        "name": "data.prj",
        "size": 11,
      },
      Object {
        "digest": "sha384-FA1fzHfLn30z4w1QOE8IM3GlS45Xvmodk+MQdzWCkx8ceyOzE3aLBV9Gl7XXZJ4e",
        "name": "data.shx",
        "size": 11,
      },
    ],
    "name": "data.shp",
    "path": "data.zip/data.shp",
    "type": "shp",
  },
]
`;

exports[`test-link-proxy-zip-shp should override the downloads if data is different 2`] = `
Array [
  Object {
    "archive": true,
    "files": Array [
      Object {
        "digest": "sha384-Q5kepNea0+a2WqPdU2MxpoawNnQ0hu4ZviVXuaVHeNn3EqEyX+MoiEpYpiOZjBTX",
        "name": "data.shp",
        "size": 14,
      },
      Object {
        "digest": "sha384-aAbsiN9W7hqamx9KmjF/0+rPfKfsWBLYeI2enYTd3FNIjMqbYkjVj2BIjydrPwHZ",
        "name": "data.cpg",
        "size": 14,
      },
      Object {
        "digest": "sha384-/ZaF7xVUzPJnIjlTrmv5sA513A8rQrnUx4s5iJzrSZ12v+MptyCqenaUubg24ouI",
        "name": "data.dbf",
        "size": 14,
      },
      Object {
        "digest": "sha384-9V/3an5UYvsUo7I2ppmZ/GHGJklwuYZLnOe1yWgo89lREz7+DTBnCvOqPHeiFQj9",
        "name": "data.prj",
        "size": 14,
      },
      Object {
        "digest": "sha384-u6yp4o4JDqAu4lIPMGzJyF/daH7V+4HHBR1sH4XNAOHQv1zRwlYJ5ZESAxTGZjEH",
        "name": "data.shx",
        "size": 14,
      },
    ],
    "name": "data.shp",
    "path": "data.zip/data.shp",
    "type": "shp",
  },
]
`;
